[tool.poetry]
name = "exo-lang"
version = "0.1.0"
description = "The programming language designed to be simple and fast, written in python"
authors = ["supercoder186 <aadit.kolar@gmail.com>"]
homepage = "https://github.com/supercoder186/Exo-Python"
repository = "https://github.com/supercoder186/Exo-Python"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
exo = "exo_lang.exo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
