[tool.poetry]
name = "exo-lang"
readme = "README.md"
version = "0.1.2"
description = "A programming language designed to be simple and fast, written in python"
authors = ["supercoder186 <aadit.kolar@gmail.com>"]
homepage = "https://github.com/supercoder186/Exo"
repository = "https://github.com/supercoder186/Exo"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
exo = "exo_lang.exo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
